Overlapping issue of settings button resolved

--- a/src/app/components/settings/settings.component.css
+++ b/src/app/components/settings/settings.component.css
@@ -3,3 +3,8 @@
 	top: 10px;
 	right: 10px;
 }
+
+.settingsOpenPostion{
+position: relative;
+top: 50px;
+}
